hphp/hack/test/typecheck/classname/typename_no_call.php.exp
File "typename_no_call.php", line 14, characters 3-11:
Don't use dynamic classes (Typing[4125])
